WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136387
More occasional crashes in ServicesController::resfreshExistingServices
https://bugs.webkit.org/show_bug.cgi?id=136387
Summary
More occasional crashes in ServicesController::resfreshExistingServices
Tim Horton
Reported
2014-08-29 14:08:37 PDT
It seems like we can double-initialize ServicesController, which is supposed to be a singleton.
Attachments
patch for landing
(1.62 KB, patch)
2014-08-29 14:12 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-08-29 14:08:55 PDT
rdar://problem/18167200
Tim Horton
Comment 2
2014-08-29 14:12:15 PDT
Created
attachment 237375
[details]
patch for landing
WebKit Commit Bot
Comment 3
2014-08-29 14:32:57 PDT
Comment on
attachment 237375
[details]
patch for landing Clearing flags on attachment: 237375 Committed
r173119
: <
http://trac.webkit.org/changeset/173119
>
WebKit Commit Bot
Comment 4
2014-08-29 14:33:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug