More occasional crashes in ServicesController::resfreshExistingServices https://bugs.webkit.org/show_bug.cgi?id=136387 <rdar://problem/18167200>

Reviewed by Dan Bernstein.

* UIProcess/mac/ServicesController.mm:
(WebKit::ServicesController::ServicesController):
Speculative fix; if this block is called synchronously, we'll end up
calling back into ::shared() before the NeverDestroyed is initialized,
ending up with two ServicesControllers.


Canonical link: https://commits.webkit.org/154198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173119 268f45cc-cd09-0410-ab3c-d52691b4dbfc