Source/WebKit2/UIProcess/WebProcessProxy.cpp
@@ -36,6 +36,7 @@
 #include "TextChecker.h"
 #include "TextCheckerState.h"
 #include "UserData.h"
+#include "WebUserContentControllerProxy.h"
 #include "WebBackForwardListItem.h"
 #include "WebContext.h"
 #include "WebNavigationDataStore.h"
@@ -162,6 +163,14 @@ void WebProcessProxy::disconnect()
     if (m_downloadProxyMap)
         m_downloadProxyMap->processDidClose();
 
+    for (VisitedLinkProvider* visitedLinkProvider : m_visitedLinkProviders)
+        visitedLinkProvider->removeProcess(*this);
+    m_visitedLinkProviders.clear();
+
+    for (WebUserContentControllerProxy* webUserContentControllerProxy : m_webUserContentControllerProxies)
+        webUserContentControllerProxy->removeProcess(*this);
+    m_webUserContentControllerProxies.clear();
+
     m_context->disconnectProcess(this);
 }
 
@@ -232,6 +241,30 @@ void WebProcessProxy::removeWebPage(uint64_t pageID)
 #endif
 
     disconnect();
+}
+
+void WebProcessProxy::addVisitedLinkProvider(VisitedLinkProvider& provider)
+{
+    m_visitedLinkProviders.add(&provider);
+    provider.addProcess(*this);
+}
+
+void WebProcessProxy::addWebUserContentControllerProxy(WebUserContentControllerProxy& proxy)
+{
+    m_webUserContentControllerProxies.add(&proxy);
+    proxy.addProcess(*this);
+}
+
+void WebProcessProxy::didDestroyVisitedLinkProvider(VisitedLinkProvider& provider)
+{
+    ASSERT(m_visitedLinkProviders.contains(&provider));
+    m_visitedLinkProviders.remove(&provider);
+}
+
+void WebProcessProxy::didDestroyWebUserContentControllerProxy(WebUserContentControllerProxy& proxy)
+{
+    ASSERT(m_webUserContentControllerProxies.contains(&proxy));
+    m_webUserContentControllerProxies.remove(&proxy);
 }
 
 WebBackForwardListItem* WebProcessProxy::webBackForwardItem(uint64_t itemID) const
